--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -322,23 +322,23 @@
                  </base-card>
               </div>
               <div class="col-md-4">
-                 <base-card ExtraClass="border-success">
+                 <base-card color="success text-white">
                     <base-card-header ExtraClass="border-success">
                        base-card-header
                     </base-card-header>
                     <base-card-body>
-                       <h4>Success card title</h4>
+                       <h4 class="text-white">Success card title</h4>
                        <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     </base-card-body>
                  </base-card>
               </div>
               <div class="col-md-4">
-                 <base-card ExtraClass="bg-info text-white">
+                 <base-card color=" border-success ">
                     <base-card-header >
                        base-card-header
                     </base-card-header>
                     <base-card-body>
-                       <h4 class="text-white">Success card title</h4>
+                       <h4 >Success card title</h4>
                        <p>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     </base-card-body>
                  </base-card>
